@@ -158,6 +158,9 @@ Release 2.3.0 - UNRELEASED
     YARN-1320. Fixed Distributed Shell application to respect custom log4j
     properties file. (Xuan Gong via vinodkv)
 
+    YARN-1416. Fixed a few invalid transitions in RMApp, RMAppAttempt and in some
+    tests. (Jian He via vinodkv)
+
 Release 2.2.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
